[package]
resolver = "2"
name = "snarkyterm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
pollster = "0.2"
wgpu_glyph = "0.14"
portable-pty = "0.4.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
